fixed button on mobile

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -113,7 +113,7 @@ body {
     font-size: 18px;
     font-weight: 600;
     padding: 14px 75px;
-    margin: 30px auto;
+    margin: 0 auto;
     text-transform: uppercase;
     transition: color .2s ease, background-color .2s ease;
 }
@@ -155,6 +155,10 @@ body {
     font-size: 18px;
     letter-spacing: 1px;
     margin: 20px 10% 0;
+}
+
+.popup .fancy-btn{
+    margin: 20px auto;
 }
 
 footer {
